--- a/index.html
+++ b/index.html
@@ -306,6 +306,45 @@
             </li>
           </ul>
         </div>
+        <section class="clients">
+          <div class="container">
+            <p class="clients-title">Постоянные клиенты</p>
+            <ul class="clients-list">
+              <li class="clients-icon">
+                <svg width="41" height="47">
+                  <use href="./images.new/symbol-defs.svg#ya-co"></use>
+                </svg>
+              </li>
+              <li class="clients-icon">
+                <svg width="40" height="52">
+                  <use href="./images.new/symbol-defs.svg#taglive-here"></use>
+                </svg>
+              </li>
+              <li class="clients-icon">
+                <svg width="45" height="42">
+                  <use href="./images.new/symbol-defs.svg#company"></use>
+                </svg>
+              </li>
+              <li class="clients-icon">
+                <svg width="106" height="60">
+                  <use href="./images.new/symbol-defs.svg#foster-peters"></use>
+                </svg>
+              </li>
+              <li class="clients-icon">
+                <svg width="63" height="47">
+                  <use href="./images.new/symbol-defs.svg#brand"></use>
+                </svg>
+              </li>
+              <li class="clients-icon">
+                <svg width="94" height="45">
+                  <use
+                    href="./images.new/symbol-defs.svg#company-tagline"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </section>
       </section>
     </main>
     <footer class="footer">
