--- a/index.html
+++ b/index.html
@@ -348,27 +348,63 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          ><span class="span">Web</span>Studio</a
-        >
-        <ul>
-          <li>
-            <address class="footer-address">
-              г. Киев, пр-т Леси Украинки, 26
-            </address>
-          </li>
-          <li>
-            <a class="footer-email" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-tel" href="tel:++380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+      <div class="container container-footer-icon">
+        <div>
+          <a class="logo-footer" href="./index.html"
+            ><span class="span">Web</span>Studio</a
+          >
+          <ul>
+            <li>
+              <address class="footer-address">
+                г. Киев, пр-т Леси Украинки, 26
+              </address>
+            </li>
+            <li>
+              <a class="footer-email" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-tel" href="tel:++380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="container-join">
+          <p class="footer-join">ПРИСОЕДИНЯЙТЕСЬ</p>
+
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a class="social-network footer-network" href="">
+                <svg class="social-icon-footer">
+                  <use href="./images.new/symbol-defs.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="social-network footer-network" href="">
+                <svg class="social-icon-footer">
+                  <use href="./images.new/symbol-defs.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="social-network footer-network" href="">
+                <svg class="social-icon-footer">
+                  <use href="./images.new/symbol-defs.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="social-network footer-network" href="">
+                <svg class="social-icon-footer">
+                  <use href="./images.new/symbol-defs.svg#inkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
