--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
         <button data-modal-close class="button-close">
           <img src="./images.new/Vector.svg" alt="" />
         </button>
+        <h3 class="modal-title">Оставьте свои данные, мы вам перезвоним</h3>
+        <form class="modal-form">
+          <label for="name">Имя</label>
+          <input type="text" name="name" id="name" />
+
+          <label for="tel">Телефон</label>
+          <input type="tel" name="tel" id="tel" />
+
+          <label for="email">Почта</label>
+          <input type="email" name="email" id="email" />
+
+          <label for="feedback">Комметарий</label>
+          <textarea name="feedback" id="feedback"></textarea>
+
+          <label for="politic"
+            >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+          </label>
+          <input type="checkbox" name="politic-company" id="politic" />
+        </form>
       </div>
     </div>
     <header>
