--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -237,6 +237,29 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="container-footer-form">
+          <h3 class="footer-form-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h3>
+          <div class="container-form-button">
+            <form class="footer-form">
+              <label for="email"></label>
+              <input
+                class="footer-form-icon"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+              />
+              <button class="footer-form-button">
+                <span>Подписаться</span>
+                <img
+                  class="footer-form-icon"
+                  src="./images.new/telegram.svg"
+                  alt=""
+                />
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
