--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </li>
         </ul>
         <ul class="link-contact">
-          <li class="link-item-page">
+          <li class="link-contact-item">
             <a class="link-header" href="mailto:info@devstudio.com">
               <svg class="icon-mail">
                 <use href="./images.new/symbol-defs.svg#mail"></use>
@@ -145,7 +145,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="link-item-page">
+          <li class="link-contact-item">
             <a class="link-header" href="tel:++380961111111">
               <svg class="icon-tel">
                 <use href="./images.new/symbol-defs.svg#tell"></use>
