--- a/index.html
+++ b/index.html
@@ -125,35 +125,43 @@
         <a class="logo" href="./index.html">
           <span class="span">Web</span>Studio</a
         >
-        <ul class="list">
-          <li class="link-item-page link-active-page">
-            <a class="link-page active-page" href="./index.html">Студия</a>
-          </li>
-          <li class="link-item-page">
-            <a class="link-page" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="link-item-page">
-            <a class="link-page" href="">Контакты</a>
-          </li>
-        </ul>
-        <ul class="link-contact">
-          <li class="link-contact-item">
-            <a class="link-header" href="mailto:info@devstudio.com">
-              <svg class="icon-mail">
-                <use href="./images.new/symbol-defs.svg#mail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="link-contact-item">
-            <a class="link-header" href="tel:++380961111111">
-              <svg class="icon-tel">
-                <use href="./images.new/symbol-defs.svg#tell"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <nav class="navigation-header">
+          <ul class="list">
+            <li class="link-item-page link-active-page">
+              <a class="link-page active-page" href="./index.html">Студия</a>
+            </li>
+            <li class="link-item-page">
+              <a class="link-page" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="link-item-page">
+              <a class="link-page" href="">Контакты</a>
+            </li>
+          </ul>
+          <ul class="link-contact">
+            <li class="link-contact-item">
+              <a class="link-header" href="mailto:info@devstudio.com">
+                <svg class="icon-mail">
+                  <use href="./images.new/symbol-defs.svg#mail"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="link-contact-item">
+              <a class="link-header" href="tel:++380961111111">
+                <svg class="icon-tel">
+                  <use href="./images.new/symbol-defs.svg#tell"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <button type="button">
+          <svg width="40px" height="40px">
+            <use href="./images.new/burger.svg#burger" />
+            <use href="./images.new/close-menu.svg#close" />
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -467,17 +475,17 @@
               ><span class="span">Web</span>Studio</a
             >
             <ul>
-              <li>
+              <li class="footer-contact-list">
                 <address class="footer-address">
                   г. Киев, пр-т Леси Украинки, 26
                 </address>
               </li>
-              <li>
+              <li class="footer-contact-list">
                 <a class="footer-email" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="footer-contact-list">
                 <a class="footer-tel" href="tel:++380961111111"
                   >+38 096 111 11 11</a
                 >
