start updating the button in the header

--- a/index.html
+++ b/index.html
@@ -140,11 +140,13 @@
           <ul class="link-contact">
             <li class="link-contact-item">
               <a class="link-header" href="mailto:info@devstudio.com">
+               
                 <svg class="icon-mail">
-                  <use href="./images.new/symbol-defs.svg#mail"></use>
+                  <use href="./images.new/symbol-defs.svg#mail">
                 </svg>
                 info@devstudio.com</a
               >
+          
             </li>
             <li class="link-contact-item">
               <a class="link-header" href="tel:++380961111111">
@@ -156,10 +158,10 @@
             </li>
           </ul>
         </nav>
-        <button type="button">
-          <svg width="40px" height="40px">
-            <use href="./images.new/burger.svg#burger" />
-            <use href="./images.new/close-menu.svg#close" />
+        <button type="button" class="button-menu is-open"  >
+          <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
+            <use class="icon-burger" href="./images.new/burger.svg#burger" />
+            <use class="icon-close" href="./images.new/close-menu.svg#close" />
           </svg>
         </button>
       </div>
