--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </li>
           </ul>
         </nav>
-        <button type="button" class="button-menu is-open"  >
+        <button type="button" data-menu-button class="button-menu is-open"  >
           <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
             <use class="icon-burger" href="./images.new/burger.svg#burger" />
             <use class="icon-close" href="./images.new/close-menu.svg#close" />
@@ -556,5 +556,6 @@
     </footer>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
