modal window for phone

--- a/index.html
+++ b/index.html
@@ -158,12 +158,17 @@
             </li>
           </ul>
         </nav>
+   
         <button type="button" data-menu-button class="button-menu is-open"  >
           <svg width="40px" height="40px" aria-label="Переключатель мобильного меню">
             <use class="icon-burger" href="./images.new/burger.svg#burger" />
             <use class="icon-close" href="./images.new/close-menu.svg#close" />
           </svg>
         </button>
+        <div class="content-menu is-open data-menu">
+          контент меню 
+        </div>
+     
       </div>
     </header>
     <main>
