--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
             <a class="link-page active-page" href="./index.html">Студия</a>
           </li>
           <li class="link-item-page">
-            <a class="link-page" href="./portfolio.html">Портфолио</a>
+            <a class="link-page menu-link-page" href="./portfolio.html"
+              >Портфолио</a
+            >
           </li>
           <li class="link-item-page">
             <a class="link-page" href="">Контакты</a>
@@ -198,6 +200,29 @@
               </svg>
               +38 096 111 11 11</a
             >
+          </li>
+        </ul>
+        <ul class="list-menu-social-networks">
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">Instagram</a>
+          </li>
+          <li class="list-item-container-menu-social-networks">
+            <div class="container-menu-social-networks"></div>
+          </li>
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">Twitter</a>
+          </li>
+          <li class="list-item-container-menu-social-networks">
+            <div class="container-menu-social-networks"></div>
+          </li>
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">Facebook</a>
+          </li>
+          <li class="list-item-container-menu-social-networks">
+            <div class="container-menu-social-networks"></div>
+          </li>
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">LinkedIn</a>
           </li>
         </ul>
       </div>
