--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,56 @@
             <a class="link-page" href="./index.html">Студия</a>
           </li>
           <li class="link-item-page link-active-page">
+            <a
+              class="link-page active-page menu-link-page"
+              href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li class="link-item-page">
+            <a class="link-page" href="">Контакты</a>
+          </li>
+        </ul>
+        <ul class="link-contact">
+          <li class="link-contact-item">
+            <a class="link-header" href="mailto:info@devstudio.com">
+              <svg class="icon-mail">
+                <use href="./images.new/symbol-defs.svg#mail" />
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="link-contact-item">
+            <a class="link-header" href="tel:++380961111111">
+              <svg class="icon-tel">
+                <use href="./images.new/symbol-defs.svg#tell" />
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="container header-mobile-container">
+        <a class="logo" href="./index.html">
+          <span class="span">Web</span>Studio</a
+        >
+        <button type="button" data-menu-button class="button-menu">
+          <svg
+            width="40px"
+            height="40px"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use class="icon-burger" href="./images.new/burger.svg#burger" />
+            <use class="icon-close" href="./images.new/close-menu.svg#close" />
+          </svg>
+        </button>
+      </div>
+      <div data-menu class="container content-menu">
+        <ul class="list">
+          <li class="link-item-page link-active-page">
+            <a class="link-page" href="./index.html">Студия</a>
+          </li>
+          <li class="link-item-page">
             <a class="link-page active-page" href="./portfolio.html"
               >Портфолио</a
             >
@@ -36,7 +86,7 @@
           <li class="link-contact-item">
             <a class="link-header" href="mailto:info@devstudio.com">
               <svg class="icon-mail">
-                <use href="./images.new/symbol-defs.svg#mail"></use>
+                <use href="./images.new/symbol-defs.svg#mail" />
               </svg>
               info@devstudio.com</a
             >
@@ -44,15 +94,37 @@
           <li class="link-contact-item">
             <a class="link-header" href="tel:++380961111111">
               <svg class="icon-tel">
-                <use href="./images.new/symbol-defs.svg#tell"></use>
+                <use href="./images.new/symbol-defs.svg#tell" />
               </svg>
               +38 096 111 11 11</a
             >
           </li>
         </ul>
+        <ul class="list-menu-social-networks">
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">Instagram</a>
+          </li>
+          <li class="list-item-container-menu-social-networks">
+            <div class="container-menu-social-networks"></div>
+          </li>
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">Twitter</a>
+          </li>
+          <li class="list-item-container-menu-social-networks">
+            <div class="container-menu-social-networks"></div>
+          </li>
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">Facebook</a>
+          </li>
+          <li class="list-item-container-menu-social-networks">
+            <div class="container-menu-social-networks"></div>
+          </li>
+          <li class="list-item-menu-social-networks">
+            <a class="link-menu-social-networks" href="">LinkedIn</a>
+          </li>
+        </ul>
       </div>
     </header>
-
     <main>
       <section class="filters-section">
         <div class="container">
@@ -188,17 +260,17 @@
               ><span class="span">Web</span>Studio</a
             >
             <ul>
-              <li>
+              <li class="footer-contact-list">
                 <address class="footer-address">
                   г. Киев, пр-т Леси Украинки, 26
                 </address>
               </li>
-              <li>
+              <li class="footer-contact-list">
                 <a class="footer-email" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="footer-contact-list">
                 <a class="footer-tel" href="tel:++380961111111"
                   >+38 096 111 11 11</a
                 >
@@ -265,5 +337,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
