--- a/portfolio.html
+++ b/portfolio.html
@@ -318,7 +318,7 @@
             <form class="footer-form">
               <label for="email"></label>
               <input
-                class="footer-form-imput"
+                class="footer-form-input"
                 type="email"
                 name="email"
                 id="email"
