--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <form class="modal-form">
           <div class="modal-form-container">
             <input
+              placeholder=" "
               class="information-input"
               type="name"
               name="name"
@@ -55,7 +56,13 @@
           </div>
 
           <div class="modal-form-container">
-            <input class="information-input" type="tel" name="tel" id="tel" />
+            <input
+              placeholder=" "
+              class="information-input"
+              type="tel"
+              name="tel"
+              id="tel"
+            />
             <label class="information-label" for="tel">Телефон</label>
             <svg
               class="information-icon"
@@ -72,6 +79,7 @@
 
           <div class="modal-form-container">
             <input
+              placeholder=" "
               class="information-input"
               type="email"
               name="email"
@@ -94,6 +102,7 @@
 
           <div class="modal-form-container feedback">
             <textarea
+              placeholder=" "
               class="information-input"
               name="feedback"
               id="feedback"
@@ -596,7 +605,7 @@
             <form class="footer-form">
               <label for="email"></label>
               <input
-                class="footer-form-imput"
+                class="footer-form-input"
                 type="email"
                 name="email"
                 id="email"
